--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -387,7 +387,7 @@ This pattern has several important implications. First, it suggests that the IAS
 
 <!-- Improvements for the scale + proposal of a new scale-->
 
-At the same time, the results do not render the IAS unusable. The consistent emergence of item pairs highlights intuitive bodily domains (e.g., visceral, expulsion, musculoskeletal) that align with everyday interoceptive experiences, supporting its ecological validity. However, the limited breadth of these pairings, the redundancy across items, and the reliance on a narrow 5-point scale all restrict the scale’s ability to differentiate between individuals and to capture the multidimensional nature of interoception [@desmedt2022measures]. These findings therefore call for refinement, either through targeted revisions of the IAS (e.g., removing redundant items, expanding modality coverage, adopting analogue response formats) or through the development of a new questionnaire that better balances theoretical coherence with empirical validity.
+At the same time, the results do not render the IAS unusable. The consistent emergence of item pairs highlights intuitive bodily domains (e.g., visceral, expulsion, musculoskeletal) that align with everyday interoceptive experiences, supporting its ecological validity. However, the limited breadth of these pairings, the redundancy across items, and the reliance on a narrow 5-point scale all restrict the scale’s ability to differentiate between individuals and to capture the multidimensional nature of interoception [@desmedt2022measures]. These findings therefore call for refinement, either through targeted revisions of the IAS (e.g., removing redundant items, addition of context-specific items, adopting analogue response formats) or through the development of a new questionnaire that better balances theoretical coherence with empirical validity.
 
 <!-- Summary -->
 
@@ -458,14 +458,16 @@ The Autism Spectrum Quotient Short Form [ASQ-S, @Hoekstra et al., 2011] is a 28-
 **Beliefs and Misbeliefs**.
 The Generic Conspiracist Beliefs Scale [GCBS, @brotherton2013measuring] is a 15-item measure assessing five dimensions of conspiracy beliefs: government malfeasance, extraterrestrial cover-up, malevolent global conspiracies, personal wellbeing, and control of information. Items are scored on a 5-point Likert scale (e.g., “Secret organizations communicate with extraterrestrials, but keep this fact from the public”).
 
-The Primal World Beliefs Inventory Short Form [PI-18, @clifton2021brief] is an 18-item measure assessing four high-order beliefs: the world is Good (vs. Bad) and its three dimensions: Safe (vs. Dangerous), Enticing (vs. Dull), and Alive (vs. Mechanistic). Items are scored on a 5-point Likert scale (e.g., “Nearly everything in the world is beautiful”). The PI-99 [@clifton2019primal] scores were combined with the 4 high-order beliefs of the PI-18. 
+The Primal World Beliefs Inventory Short Form [PI-18, @clifton2021brief] is an 18-item measure assessing four high-order beliefs: the world is Good (vs. Bad) and its three dimensions: Safe (vs. Dangerous), Enticing (vs. Dull), and Alive (vs. Mechanistic). Items are scored on a 5-point Likert scale (e.g., “Nearly everything in the world is beautiful”). 
+
+The Primal World Beliefs Inventory [PI-99; @clifton2019primal] is a 99-item measure assessing high-order beliefs about the world. Items are scored on a 5-point Likert scale (e.g., “Nearly everything in the world is beautiful”).The PI-18 [@clifton2021brief] is a short form of the orginal questionnaire assessing the 4 main world beliefs: the world is Good (vs. Bad) and its three dimensions: Safe (vs. Dangerous), Enticing (vs. Dull), and Alive (vs. Mechanistic). Scores from the PI-18 scores were combined with the PI-99.
 
 The Lie Scale [LIE, @makowski2023structure] is a 16-item measure of lying tendencies across four components: Ability, Frequency, Negativity, and Contextuality. Items are scored on visual analogue scales (e.g., “I am a good liar”).
 
 ### Data Analysis
 
 <!-- Preprocessing and standardization -->
-All variables from the 16 open-access datasets will be extracted and standardized (z-scored). For continuous predictors, we will first ensure consistent ranges across datasets; when necessary, ranges will be rescaled to achieve comparability. In cases where scales of different lengths measure the same construct, scores will be harmonized: when possible, means will be computed from overlapping items, while in other cases total scores will be normalized by the number of items. We will collapse redundant subscales (e.g., PHQ-2 and GAD-2 within PHQ-4) into unified composite scores. Similarly, short forms of trait anxiety (e.g., STAI-5-trait) will be collapsed with their longer counterpart (STAI-T), with scores computed as the mean to ensure comparable ranges. Longer formats of the PI (PI-99) will be collapsed into its shorter version (PI-18). Missing data will be handled via listwise deletion on a per-model basis prior to fitting.
+All variables from the 16 open-access datasets will be extracted and standardized (z-scored). For continuous predictors, we will first ensure consistent ranges across datasets; when necessary, ranges will be rescaled to achieve comparability. In cases where scales of different lengths measure the same construct, scores will be harmonized: when possible, means will be computed from overlapping items, while in other cases total scores will be normalized by the number of items. We will collapse redundant subscales (e.g., PHQ-2 and GAD-2 within PHQ-4) into unified composite scores. Similarly, short forms of trait anxiety (e.g., STAI-5-trait) will be collapsed with their longer counterpart (STAI-T), with scores computed as the mean to ensure comparable ranges. Shorter formats of the PI (PI-18) will be combined with scores of its longer version (PI-99). Missing data will be handled via listwise deletion on a per-model basis prior to fitting.
 
 <!-- Multilevel modelling approach -->
 Associations will be estimated using multilevel regression models implemented in the glmmTMB package [@glmTMB]. Each predictor will be entered separately, with the seven IAS item pairs identified in Study 1 (“Hungry–Thirsty”, “Muscles–Pain”, “Wind–Burp”, “Urinate–Defecate”, “Breathing–Heart”, “Bruise–Blood”, “Cough–Sneeze”) and the original IAS scale serving as outcomes. Models will include random intercepts and slopes by sample to account for between-study heterogeneity; when models fail to converge, a reduced structure with random intercepts only will be used. This approach will treat datasets as clusters, thereby providing pooled estimates of the associations while accounting for both within- and between-sample variability, akin to a meta-analytic framework.
@@ -479,7 +481,7 @@ From each fitted model, we will extract standardized regression coefficients (β
 Age was positively associated across Ias correlates (mean r = .12), with all correlations significant. Gender showed near-zero effects (mean r = −.01), with 63% reaching significance.
 
 <!-- Interoceptive measures -->
-MAIA subscales showed consistent positive associations with IAS: Noticing (β = .259), Attention Regulation (β = .249), Trusting (β = .236), Emotional Awareness (β = .197), Listening (β = .176), and Self-Regulation (β = .189) were significant across IAS pairings and the full scale. Autonomic reactivity (BPQ) was negatively associated (β = −.173, 88% significant), while body awareness was weaker and unreliable (β = .122, 25%). Alexithymia was consistently negative: ICQ (β = −.316), TAS-DIF (β = −.211), TAS-DDF (β = −.150), TAS-EOT (β = −.081, 75%), and BVAQ-Cognitive (β = −.200) were robust. In contrast, BVAQ-Affective showed a weak and inconsistent positive effect (β = .042, 13%).
+MAIA subscales showed consistent positive associations with IAS: Noticing (β = .259), Attention Regulation (β = .249), Trusting (β = .236), Emotional Awareness (β = .197), Listening (β = .176), and Self-Regulation (β = .189) were significant across IAS pairings and the full scale. Autonomic Reactivity (BPQ) was negatively associated (β = −.173, 88% significant), while Body Awareness (BPQ) was weaker and unreliable (β = .122, 25%). Alexithymia was consistently negative: ICQ (β = −.316), TAS-DIF (β = −.211), TAS-DDF (β = −.150), TAS-EOT (β = −.081, 75%), and BVAQ-Cognitive (β = −.200) were robust. In contrast, BVAQ-Affective showed a weak and inconsistent positive effect (β = .042, 13%).
 
 <!-- Mood questionnaires -->
 
@@ -487,15 +489,16 @@ Depression (BDI: β = −.204) and anxiety (STAI-T: β = −.189) were reliably 
 
 <!-- Psychopathology -->
 
-Autistic traits showed the clearest pattern: Imagination (β = −.184, 88%), Low Attentional Switching (β = −.143, 63%), and Lack of Social Skills (β = −.119, 63%) were consistently negative. Among maladaptive traits, only Negative Affect (β = −.111, 63%) showed reliable associations. Schizotypal traits were generally weak, with only No Close Friends (β = −.122, 50%) approaching consistency.
+Autistic traits showed a clear pattern: Imagination (β = −.184, 88%), Low Attentional Switching (β = −.143, 63%), and Lack of Social Skills (β = −.119, 63%) were consistently negative. Among maladaptive traits, only Negative Affect (β = −.111, 63%) showed reliable associations. Schizotypal traits were generally weak, with only No Close Friends (β = −.122, 50%) approaching consistency.
 
 <!-- Personality and beliefs -->
 
 Within the Big Five, Openness (β = .143, 100%), Agreeableness (β = .053, 100%), and Conscientiousness (β = .028, 88%) were consistently positive; other traits were negligible. Conspiracy, world belief, and lying profiles showed no reliable effects, except a small and consistent association with the believe the world is readily comprehensible (β = .113, 75%) and a small and somewhat consistent association with the belief that the world is alive (β = .087, 63%)
 
 <!-- Number of correlations with the intero vars -->
-Across these pairs, the “Original” scale was most frequently the strongest correlate (25 instances), followed by Hungry/Thirsty (16), Bruise/Blood (11), Muscles/Pain (7), and smaller contributions from Breathing/Heart, Cough/Sneeze, Urinate/Defecate, and Wind/Burp.
+Across these pairs, the full scale was most frequently the strongest correlate (25 instances), followed by Hungry/Thirsty (16), Bruise/Blood (11), Muscles/Pain (7), and smaller contributions from Breathing/Heart, Cough/Sneeze, Urinate/Defecate, and Wind/Burp.
 
+[**NOTE* justify the choice of those specific primals ? higehr correlations with the IAS?]
 
 ## Discussion
 
@@ -503,16 +506,16 @@ Across these pairs, the “Original” scale was most frequently the strongest c
 The second study set out to provide a comprehensive overview of the dispositional correlates of the IAS by pooling data across multiple datasets, while also testing whether the refined 14-item version identified in Study 1 confers practical advantages over the original 21-item scale.
 
 <!-- Convergence with interoceptive self-reports -->
-Consistent with prior research, the IAS showed strong positive associations with other interoceptive self-report measures, particularly the MAIA, with the exception of the Not Distracting and Not Worrying facets [@brand202]. This pattern replicates earlier findings while contradicting [@todd2022], who reported only a near-zero correlation with Not Worrying. Similarly, while previous evidence on the BPQ was mixed, our results indicate more robust associations with the Autonomic Reactivity dimension compared to body awareness [@campos2021; @brand2023; @todd2022]. The replication of negative associations with interoceptive confusion [@murphy2019; @brand2023] further supports the convergent and discriminant validity of the IAS.
+Consistent with prior research, the IAS showed strong positive associations with other interoceptive self-report measures, particularly the MAIA, with the exception of the Not Distracting and Not Worrying facets [@brand2023]. This pattern replicates earlier findings while contradicting [@todd2022], who reported only a near-zero correlation with Not Worrying. Similarly, while previous evidence on the BPQ was mixed, our results indicate more robust associations with the Autonomic Reactivity dimension compared to body awareness [@campos2021; @brand2023; @todd2022]. This pattern diverges from earlier findings that consistently reported significant positive associations with Body Awareness [@gaggero2021; @campos2021; @brand2023], while at the same time complementing reports of significant negative correlations with Autonomic Reactivity  [@gaggero2021]. The replication of negative associations with interoceptive confusion [@murphy2019; @brand2023; @gaggero2021] further supports the convergent and discriminant validity of the IAS.
 
 <!-- Negative associations with alexithymia and mood -->
-Robust negative correlations were observed between the IAS and alexithymia, in line with prior studies [@murphy2019; @campos2021; @brand2023; @lin2023; @koike2023]. Similarly, negative associations with depression and anxiety, as measured by the BDI and STAI-T, reinforce the clinical relevance of interoceptive accuracy [@brand2023; @lin2023]. Somatic symptoms were also negatively related to the IAS, although effect sizes were small, echoing earlier findings [@brand2023; @lin2023; @koike2023]. At the same time, more recent studies have reported null or inconsistent associations between interoception and mental-health symptomatology, suggesting that these links may not be universal and could depend on measurement choices or sample characteristics [**REF PRE_PRINT?**].
+Robust negative correlations were observed between the IAS and alexithymia, in line with prior studies [@murphy2019; @campos2021; @brand2023; @lin2023; @koike2023]. Similarly, negative associations with depression and anxiety, as measured by the BDI and STAI-T, reinforce the clinical relevance of interoceptive accuracy [@brand2023; @lin2023]. Somatic symptoms were also negatively related to the IAS, although effect sizes were small, echoing earlier findings [@brand2023; @lin2023; @koike2023]. At the same time, more recent studies have reported null or inconsistent associations between interoceptive sensitivity and mental-health symptomatology, suggesting that such links may not generalize across all interoceptive domains and could be contingent on measurement approaches or sample characteristics [**REF PRE_PRINT?**].
 
 <!-- Autism-related traits -->
 Clear negative associations also emerged with autism-related traits such as imagination, low attentional switching, and reduced social skills. These findings resonate with @dubois2016 review reporting interoceptive abnormalities in autism. Nonetheless, our findings are limited to a single dataset employing the ASQ, which constrains the generalisability of conclusions regarding the relationship between interoception and autistic traits.
 
 <!-- Personality dimensions -->
-The associations between interoception and personality traits were more nuanced. Whereas prior work suggested a negative link with neuroticism [@brand2023], we found this relationship to be inconsistent and even slightly positive, though near zero. By contrast, openness and agreeableness were consistently positively associated with the IAS, albeit with small effect sizes. These findings are consistent with emerging evidence linking openness to interoception as measured by the MAIA-2 [@simkute2025interoception], and complement reports of associations between objective interoceptive sensitivity and extraversion [@haustein2024interoception].
+The associations between interoception and personality traits were more nuanced. Whereas prior work suggested a negative link with neuroticism [@brand2023], we found this relationship to be inconsistent and even slightly positive, though near zero. By contrast, openness and agreeableness were consistently positively associated with the IAS, albeit with small effect sizes. These findings are consistent with emerging evidence linking openness to interoception as measured by the MAIA-2 [@simkute2025interoception], and complement reports of associations between interoceptive sensitivity (i.e., the accuracy of reported heartbeat counts relative to actual heartbeats) and extraversion [@haustein2024interoception].
 
 <!-- Exploratory findings -->
 Beyond established correlates, exploratory analyses revealed weak but positive associations between the IAS and primal world beliefs, specifically perceiving the world as alive and understandable. While preliminary, these effects suggest a possible link between one’s relationship with internal bodily signals and broader worldviews, raising intriguing questions about how interoception might shape existential or meaning-related beliefs.
